// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ci-init --attest (GitHub build-provenance attestations of the scan outputs) > renders exactly as expected (snapshot) 1`] = `
"# Generated by \`dev-guardian ci-init github\` — do not hand-edit the pinned
# SHAs/versions/checksums below; re-run the generator after a dev-guardian
# release instead. It reads .claude-plugin/plugin.json (the release tag,
# resolved to its exact commit — see below) and configs/ci/pinned.json
# (every action SHA and scanner checksum) — bump those and every value here
# refreshes together in one command.
#
# What this job does, and why each step exists:
#   1. Checks out THIS repository (the project being scanned) at FULL
#      history (\`fetch-depth: 0\`), not the default single-commit shallow
#      clone: gitleaks' own finding identity includes the commit a secret
#      was introduced in, and a shallow clone has no such commit to find —
#      it attributes every PRE-EXISTING secret to the grafted boundary
#      commit instead, which is a DIFFERENT commit on every push (the
#      boundary moves with HEAD), so every finding looks "new" on every
#      run and the gate never passes twice in a row for the same repo.
#      \`persist-credentials: false\` (zizmor's own "artipacked" check) — the
#      checkout action's default leaves the job's GITHUB_TOKEN in the local
#      git config for the rest of the job; nothing after this step needs
#      to push or authenticate as this job, so there is nothing to persist.
#   2. Installs Node.js >= 22.13 — dev-guardian's own floor (\`node:sqlite\`
#      with no \`--experimental-sqlite\` flag).
#   3. Installs the .NET SDK, but ONLY when this repository looks like a
#      .NET project (a root .csproj/.sln) — scan_sast's .NET analyzers are
#      themselves gated the identical way (\`hasRootDotnetSignal\`) and are
#      simply not attempted, no gap at all, on a repo with neither; running
#      a ~300 MB SDK install on every Node/Python-only project regardless
#      would be pure waste. actions/setup-dotnet is pinned by commit SHA
#      like every other action here.
#   4. Points DEV_GUARDIAN_HOME at a directory under \`$RUNNER_TEMP\` — the
#      runner's own documented scratch space — via \`$GITHUB_ENV\`, not a
#      workflow- or job-level \`env:\` block: GitHub Actions does not allow
#      the \`runner\` context there at all ("context 'runner' is not allowed
#      here" — actionlint catches this, and it is why this step exists
#      instead of one \`env:\` line at the top).
#   5. Clones dev-guardian itself at a pinned release tag, resolved to its
#      exact commit SHA when this pipeline was GENERATED (ci-init: \`git
#      ls-remote\`/a local tag lookup) and verified again with \`git
#      rev-parse HEAD\` right after cloning — a moving tag between
#      generation and this run is a supply-chain red flag, and the job
#      refuses rather than trust it silently. Cloned into
#      \`$DEV_GUARDIAN_HOME\`, OUTSIDE this checkout, never into a
#      subdirectory of it: dev-guardian is NOT a dependency of this
#      repository (there is no package.json entry for \`npm install\` to
#      fetch it from), and cloning it INTO the checkout would make step 8's
#      \`dev-guardian scan --project .\` scan dev-guardian's own source,
#      history and deliberately-vulnerable test fixtures as if they were
#      part of THIS project — polluting the SARIF report, the baseline and
#      the gate with findings that have nothing to do with this repository.
#   6. \`npm ci --omit=dev\` inside the clone's mcp/ directory. mcp/dist/ is
#      committed to the dev-guardian repo (its own convention: the repo IS
#      the distribution, no build step at install time) but its RUNTIME
#      dependencies (execa, zod, yaml, the MCP SDK) are ordinary npm
#      packages, not vendored, so they still need installing once per run.
#   7. Installs the scanner binaries \`dev-guardian scan\` drives underneath
#      — Trivy, gitleaks and actionlint — each pinned by exact version and
#      verified against a sha256 fetched from that tool's own GitHub
#      release (never "latest"), downloaded and extracted into a SCRATCH
#      directory under \`$RUNNER_TEMP\`, never into this checkout (an earlier
#      version wrote the downloaded tarballs and extracted binaries
#      straight into the working directory, which gitleaks' own
#      working-tree pass then saw as untracked files well over its size
#      limit — a self-inflicted coverage gap on every run). bandit is
#      installed unconditionally too (cheap; scan_sast only attempts it at
#      all on a repo with Python files, but a template cannot know that in
#      advance). Semgrep and zizmor are Python-distributed (pipx); pip
#      verifies each downloaded wheel's hash against what PyPI's own index
#      recorded for that exact version — real integrity, weaker than
#      \`--require-hashes\` against a pinned constraints file (see
#      configs/ci/pinned.json's own note) — so they are pinned by exact
#      version instead of a hand-fetched checksum.
#   8. Runs \`dev-guardian scan\`, gated against the COMMITTED baseline
#      (.guardian/baseline.json). If this repository has never run
#      \`dev-guardian baseline update\`, every existing finding reads as
#      "new" and this job will very likely fail on its first run — do that
#      once locally and commit the result before relying on this gate.
#   9. Uploads the SARIF report to GitHub code scanning. \`if: always()\` so
#      the upload still runs when step 8 fails the gate (the SARIF file was
#      still written — dev-guardian's own \`scan\` command never skips
#      writing it just because the gate failed); \`continue-on-error: true\`
#      because a repository without GitHub Advanced Security enabled must
#      not fail the whole job over the upload alone — step 8's own gate is
#      what decides pass/fail here, not this step. \`actions: read\` is in
#      \`permissions:\` because a PRIVATE repository's upload-sarif step
#      needs it (public repos do not, but there is no cheaper way to cover
#      both without branching the template on repo visibility).
#  10. (\`ci-init --attest\`) Step 8 writes the JSON report too — \`--format
#      json\`, kept with \`tee\` so the log still shows it, under \`pipefail\`
#      so the scan's own exit code still decides the step — and on a push
#      the scan job keeps both reports as the \`dev-guardian-reports\`
#      artifact. Anyone verifying downloads them from there. On a PUBLIC
#      repository that exposes them: the full JSON report (every new
#      finding, its file and line) is printed to the job log, and the
#      artifact can be downloaded by any signed-in GitHub user while it is
#      retained.
#  11. (\`ci-init --attest\`) A separate \`attest\` job signs a SLSA
#      build-provenance attestation for the two reports with
#      actions/attest-build-provenance (Sigstore keyless, stored in this
#      repository's attestations). It is the ONLY job with \`id-token:
#      write\` and \`attestations: write\`, and it holds nothing else: the
#      scan job builds and scans the project, so it gets no signing
#      capability of its own. It runs even when the gate failed — an
#      attestation proves where a report came from, never that the gate
#      passed — but first refuses a report that is empty or not a report
#      (\`tee\` creates the file even when the scan crashed before writing
#      one). Push only — a fork's pull request gets no OIDC token, and a
#      pull request's reports are not what anyone verifies later. Artifact
#      attestations need a public repository, or GitHub Enterprise Cloud for
#      a private one; elsewhere this job fails, loudly. Verify a downloaded
#      report with:
#        gh attestation verify dev-guardian-results.sarif --repo OWNER/REPO \\
#          --signer-workflow OWNER/REPO/.github/workflows/dev-guardian.yml \\
#          --source-ref refs/heads/main
#      \`--source-ref\` matters: \`--signer-workflow\` names this FILE, and a
#      copy of it on any other branch, edited to run on a push there, signs
#      as the same path.
name: dev-guardian

on:
  push:
    branches: ["main"]
  pull_request:

# Nothing at the workflow level: each job states exactly what it holds.
permissions: {}

jobs:
  scan:
    runs-on: ubuntu-latest
    permissions:
      contents: read
      security-events: write
      actions: read
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1 # v7.0.1
        with:
          fetch-depth: 0
          persist-credentials: false

      - name: Set up Node.js
        uses: actions/setup-node@820762786026740c76f36085b0efc47a31fe5020 # v7.0.0
        with:
          node-version: '22'
          # No dependency cache: setup-node caches npm automatically when
          # package.json names it, and a cache a pull request can write is
          # restored on a push to --branch — zizmor's cache-poisoning finding
          # on a release branch. Nothing here needs the scanned project's
          # dependencies cached; dev-guardian's own install is \`npm ci\`.
          package-manager-cache: false

      - name: Detect a .NET project (root .csproj/.fsproj/.sln/.slnx — same set scan_sast's own hasRootDotnetSignal checks)
        id: dotnet_probe
        run: |
          set -euo pipefail
          # NOT \`ls -- *.csproj *.fsproj *.sln *.slnx\`: with even one of the
          # four patterns unmatched, bash still passes its LITERAL, unglobbed
          # string to \`ls\` (no nullglob here), which then reports that literal
          # name as inaccessible and exits non-zero — so \`ls\` here would need
          # ALL FOUR extensions present at once to ever report "found",
          # exactly backwards from the point of this probe. Reproduced
          # directly: a directory holding only App.csproj (no .fsproj/.sln/
          # .slnx) still made the \`ls\` form print "found=false". \`find\` never
          # errors on an extension nothing matches, and \`-iname\` matches
          # case-insensitively, like hasRootDotnetSignal's own \`/i\` regex.
          if find . -maxdepth 1 \\( -iname '*.csproj' -o -iname '*.fsproj' -o -iname '*.sln' -o -iname '*.slnx' \\) | grep -q .; then
            echo "found=true" >> "$GITHUB_OUTPUT"
          else
            echo "found=false" >> "$GITHUB_OUTPUT"
          fi

      - name: Set up .NET SDK
        if: steps.dotnet_probe.outputs.found == 'true'
        uses: actions/setup-dotnet@a98b56852c35b8e3190ac28c8c2271da59106c68 # v6.0.0
        with:
          dotnet-version: '10.0.x'

      - name: Point DEV_GUARDIAN_HOME outside this checkout
        run: echo "DEV_GUARDIAN_HOME=$RUNNER_TEMP/dev-guardian" >> "$GITHUB_ENV"

      - name: Clone dev-guardian (outside this checkout — see the header comment)
        run: |
          set -euo pipefail
          git clone --depth 1 --branch "v3.0.0" "https://github.com/linofcp007/dev-guardian.git" "$DEV_GUARDIAN_HOME"
          actual_sha="$(git -C "$DEV_GUARDIAN_HOME" rev-parse HEAD)"
          if [ "$actual_sha" != "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" ]; then
            echo "dev-guardian clone at v3.0.0 resolved to $actual_sha, expected aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -- the tag may have moved since this pipeline was generated (a supply-chain red flag). Re-run 'dev-guardian ci-init' after checking why, then commit the refreshed pipeline." >&2
            exit 1
          fi

      - name: Install dev-guardian's runtime dependencies
        run: npm ci --omit=dev --prefix "$DEV_GUARDIAN_HOME/mcp"

      - name: Install scanners (Trivy/gitleaks/actionlint checksum-verified; bandit/semgrep/zizmor pinned by version)
        run: |
          set -euo pipefail
          mkdir -p "$RUNNER_TEMP/dev-guardian-scanners"
          # $1=binary name  $2=download URL  $3=expected sha256  $4=member path inside the tarball
          install_checked() {
            local name="$1" url="$2" sha256="$3" member="$4" dir="$RUNNER_TEMP/dev-guardian-scanners"
            curl -sSfL -o "$dir/$name.tar.gz" "$url"
            echo "$sha256  $dir/$name.tar.gz" | sha256sum -c -
            tar -xzf "$dir/$name.tar.gz" -C "$dir" "$member"
            sudo install -m 0755 "$dir/$member" "/usr/local/bin/$name"
          }
          install_checked trivy "https://github.com/aquasecurity/trivy/releases/download/v0.74.0/trivy_0.74.0_Linux-64bit.tar.gz" "2ae6fe3ee734b7fdf11335663e18c75ea12dccc76062f09f164a3b0f8be4371a" "trivy"
          install_checked gitleaks "https://github.com/gitleaks/gitleaks/releases/download/v8.30.1/gitleaks_8.30.1_linux_x64.tar.gz" "551f6fc83ea457d62a0d98237cbad105af8d557003051f41f3e7ca7b3f2470eb" "gitleaks"
          install_checked actionlint "https://github.com/rhysd/actionlint/releases/download/v1.7.12/actionlint_1.7.12_linux_amd64.tar.gz" "8aca8db96f1b94770f1b0d72b6dddcb1ebb8123cb3712530b08cc387b349a3d8" "actionlint"
          pipx install "bandit[toml]==1.9.4"
          pipx install "semgrep==1.178.0"
          pipx install "zizmor==1.30.1"
          # \`run:\` steps do not share a shell, so \`export PATH=...\` here
          # would not reach the later "dev-guardian scan" step — pipx's own
          # install directory has to be persisted the GitHub Actions way.
          echo "$HOME/.local/bin" >> "$GITHUB_PATH"

      - name: dev-guardian scan
        run: |
          set -euo pipefail
          node "$DEV_GUARDIAN_HOME/cli/dev-guardian.mjs" scan \\
            --project . \\
            --fail-on high \\
            --format json \\
            --sarif dev-guardian-results.sarif \\
            | tee dev-guardian-report.json

      - name: Upload SARIF to code scanning
        if: always()
        continue-on-error: true
        uses: github/codeql-action/upload-sarif@2892aa5e19bbd11bc0cff5427e3b750a04d9e3c2 # v4.38.2
        with:
          sarif_file: dev-guardian-results.sarif

      - name: Keep the reports for the attest job
        if: \${{ !cancelled() && github.event_name == 'push' }}
        uses: actions/upload-artifact@043fb46d1a93c77aae656e7c1c64a875d1fc6a0a # v7.0.1
        with:
          name: dev-guardian-reports
          path: |
            dev-guardian-report.json
            dev-guardian-results.sarif
          if-no-files-found: error

  attest:
    needs: scan
    if: \${{ !cancelled() && github.event_name == 'push' }}
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      attestations: write
    steps:
      - name: Fetch the reports the scan job kept
        uses: actions/download-artifact@3e5f45b2cfb9172054b4087a40e8e0b5a5461e7c # v8.0.1
        with:
          name: dev-guardian-reports

      # tee creates dev-guardian-report.json even when the scan crashed
      # before writing a report: attest a report, never an empty file.
      - name: Refuse an empty or unreadable report
        run: |
          set -euo pipefail
          node -e '
            const fs = require("fs");
            const report = JSON.parse(fs.readFileSync("dev-guardian-report.json", "utf8"));
            if (report === null || typeof report !== "object" || Array.isArray(report) || !("exit_code" in report) || !("coverage" in report)) {
              throw new Error("dev-guardian-report.json is not a dev-guardian scan report");
            }
            const sarif = JSON.parse(fs.readFileSync("dev-guardian-results.sarif", "utf8"));
            if (sarif === null || typeof sarif !== "object" || sarif.version !== "2.1.0" || !Array.isArray(sarif.runs)) {
              throw new Error("dev-guardian-results.sarif is not a SARIF 2.1.0 log");
            }
          '

      - name: Attest the reports' build provenance
        uses: actions/attest-build-provenance@4d101475d8b20a2381f78447822ac1eab6504dd8 # v4.2.2
        with:
          subject-path: |
            dev-guardian-report.json
            dev-guardian-results.sarif

# Paste this at the path shown, or re-run with --write to write it there.
"
`;

exports[`ci-init: snapshot of the rendered templates > bitbucket renders exactly as expected 1`] = `
"# Generated by \`dev-guardian ci-init bitbucket\` — do not hand-edit the
# pinned versions/checksums below; re-run the generator after a
# dev-guardian release instead. It reads .claude-plugin/plugin.json (the
# release tag, resolved to its exact commit — see below) and
# configs/ci/pinned.json (every scanner checksum) — bump those and every
# value here refreshes together in one command.
#
# What this pipeline does, and why each step exists:
#   1. Runs in a plain node:22-bookworm image — dev-guardian's own floor is
#      Node >= 22.13 (\`node:sqlite\` with no \`--experimental-sqlite\` flag).
#      \`clone: depth: full\` below clones FULL history, not Bitbucket's own
#      shallow default (the last 50 commits): gitleaks' own finding
#      identity includes the commit a secret was introduced in, and a
#      shallow clone has no such commit for anything older than its own
#      boundary — it attributes every pre-existing secret to the grafted
#      boundary commit instead, which moves with every push, so every
#      finding looks "new" on every run and the gate never passes twice in
#      a row. Bitbucket's own documented limitation, primary source —
#      support.atlassian.com/bitbucket-cloud/kb/clone-depth-not-applying-for-pull-request-pipelines/
#      — quoted rather than guessed: "configuring a clone depth in
#      pipelines does not take effect for pull request pipelines"; the KB's
#      own "Cause" section explains why — a PR pipeline's build setup MERGES
#      the destination branch into the source branch to mimic the
#      post-merge state, and "the clone depth is not considered for the
#      merge. Otherwise, the destination branch commits would not be cloned
#      and no merge would be possible." So only the \`default\` (branch push)
#      pipeline below is guaranteed a true full clone by this setting; a PR
#      pipeline's own clone depth is whatever that merge step needs — not a
#      fixed shallow default this template can name, and not something
#      \`depth: full\` controls — and there is no config-only way to change
#      that.
#   2. Installs curl/git/pipx from Debian's own apt repo — the bookworm
#      base image does not carry them by default. A .NET project also
#      needs the .NET SDK for scan_sast's .NET analyzers (the identical
#      gate \`hasRootDotnetSignal\` applies on the GitHub template — a root
#      .csproj/.fsproj/.sln/.slnx); this template does NOT install it
#      (Microsoft's own dotnet-install.sh has no per-release checksum this
#      task could verify the way it did for the three Go binaries below) —
#      a .NET project needs \`dotnet\` on the image or PATH already, or
#      \`dev-guardian scan\` will report \`dotnet-sdk\` as a named gap and the
#      pipeline's own gate will exit 2 (incomplete scan, never a silent
#      pass) until it does.
#   3. Clones dev-guardian itself at a pinned release tag, resolved to its
#      exact commit SHA when this pipeline was GENERATED (ci-init: \`git
#      ls-remote\`/a local tag lookup) and verified again with \`git
#      rev-parse HEAD\` right after cloning — a moving tag between
#      generation and this run is a supply-chain red flag, and the build
#      refuses rather than trust it silently. Cloned into \`/tmp\`, OUTSIDE
#      \`$BITBUCKET_CLONE_DIR\` (this checkout), never into a subdirectory of
#      it: dev-guardian is NOT a dependency of this repository, and cloning
#      it INTO the checkout would make step 6's \`dev-guardian scan
#      --project .\` scan dev-guardian's own source, history and
#      deliberately-vulnerable test fixtures as if they were part of THIS
#      project — polluting the SARIF report, the baseline and the gate with
#      findings that have nothing to do with this repository.
#   4. \`npm ci --omit=dev\` inside the clone's mcp/ directory. mcp/dist/ is
#      committed (dev-guardian's own convention: the repo IS the
#      distribution) but its RUNTIME dependencies (execa, zod, yaml, the
#      MCP SDK) still need installing once per run.
#   5. Installs the scanner binaries \`dev-guardian scan\` drives — Trivy,
#      gitleaks and actionlint — each pinned by exact version and verified
#      against a sha256 fetched from that tool's own GitHub release (never
#      "latest"), downloaded and extracted into a SCRATCH directory under
#      \`/tmp\`, never into this checkout (an earlier version wrote the
#      downloaded tarballs and extracted binaries straight into the working
#      directory, which gitleaks' own working-tree pass then saw as
#      untracked files well over its size limit — a self-inflicted coverage
#      gap on every run). bandit is installed unconditionally too (cheap;
#      scan_sast only attempts it at all on a repo with Python files, but a
#      template cannot know that in advance). Semgrep and zizmor are
#      Python-distributed (pipx); pip verifies each downloaded wheel's hash
#      against what PyPI's own index recorded for that exact version — real
#      integrity, weaker than \`--require-hashes\` against a pinned
#      constraints file (see configs/ci/pinned.json's own note) — so they
#      are pinned by exact version instead of a hand-fetched checksum.
#   6. Runs \`dev-guardian scan\`, gated against the COMMITTED baseline
#      (.guardian/baseline.json). If this repository has never run
#      \`dev-guardian baseline update\`, every existing finding reads as
#      "new" and this pipeline will very likely fail on its first run — do
#      that once locally and commit the result before relying on this gate.
#   7. Declares the SARIF report as a Bitbucket artifact, collected whether
#      the script step succeeds or fails. Bitbucket Pipelines has no native
#      SARIF/code-scanning ingestion the way GitHub does — this is a plain
#      downloadable artifact, attached to the build.
#
# Shell and reuse: \`set -eu\`, no \`pipefail\`, no \`local\` — same reasoning as
# the GitLab template (portability, not a claim about which shell actually
# runs the script; see that template's own header for the full
# explanation). The step itself is defined ONCE, under \`definitions.steps\`,
# and referenced by YAML alias (\`*dev-guardian-scan\`) from both \`default\`
# and \`pull-requests\` — Bitbucket's own documented mechanism for exactly
# this (support.atlassian.com/bitbucket-cloud/docs/yaml-anchors) — rather
# than duplicating the whole step twice in this file.
image: node:22-bookworm

clone:
  depth: full

definitions:
  steps:
    - step: &dev-guardian-scan
        name: dev-guardian scan
        script:
          - set -eu
          - apt-get update && apt-get install -y --no-install-recommends curl ca-certificates git pipx
          - export DEV_GUARDIAN_HOME=/tmp/dev-guardian
          - git clone --depth 1 --branch "v3.0.0" "https://github.com/linofcp007/dev-guardian.git" "$DEV_GUARDIAN_HOME"
          - |
            actual_sha="$(git -C "$DEV_GUARDIAN_HOME" rev-parse HEAD)"
            if [ "$actual_sha" != "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" ]; then
              echo "dev-guardian clone at v3.0.0 resolved to $actual_sha, expected aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -- the tag may have moved since this pipeline was generated (a supply-chain red flag). Re-run 'dev-guardian ci-init' after checking why, then commit the refreshed pipeline." >&2
              exit 1
            fi
          - npm ci --omit=dev --prefix "$DEV_GUARDIAN_HOME/mcp"
          - |
            mkdir -p /tmp/dev-guardian-scanners
            install_checked() {
              name="$1"; url="$2"; sha256="$3"; member="$4"; dir="/tmp/dev-guardian-scanners"
              curl -sSfL -o "$dir/$name.tar.gz" "$url"
              echo "$sha256  $dir/$name.tar.gz" | sha256sum -c -
              tar -xzf "$dir/$name.tar.gz" -C "$dir" "$member"
              install -m 0755 "$dir/$member" "/usr/local/bin/$name"
            }
            install_checked trivy "https://github.com/aquasecurity/trivy/releases/download/v0.74.0/trivy_0.74.0_Linux-64bit.tar.gz" "2ae6fe3ee734b7fdf11335663e18c75ea12dccc76062f09f164a3b0f8be4371a" "trivy"
            install_checked gitleaks "https://github.com/gitleaks/gitleaks/releases/download/v8.30.1/gitleaks_8.30.1_linux_x64.tar.gz" "551f6fc83ea457d62a0d98237cbad105af8d557003051f41f3e7ca7b3f2470eb" "gitleaks"
            install_checked actionlint "https://github.com/rhysd/actionlint/releases/download/v1.7.12/actionlint_1.7.12_linux_amd64.tar.gz" "8aca8db96f1b94770f1b0d72b6dddcb1ebb8123cb3712530b08cc387b349a3d8" "actionlint"
          - pipx install "bandit[toml]==1.9.4"
          - pipx install "semgrep==1.178.0"
          - pipx install "zizmor==1.30.1"
          - export PATH="$HOME/.local/bin:$PATH"
          - node "$DEV_GUARDIAN_HOME/cli/dev-guardian.mjs" scan --project . --fail-on high --format human --sarif dev-guardian-results.sarif
        artifacts:
          - dev-guardian-results.sarif

pipelines:
  default:
    - step: *dev-guardian-scan
  pull-requests:
    '**':
      - step: *dev-guardian-scan

# Paste this at the path shown, or re-run with --write to write it there.
"
`;

exports[`ci-init: snapshot of the rendered templates > github renders exactly as expected 1`] = `
"# Generated by \`dev-guardian ci-init github\` — do not hand-edit the pinned
# SHAs/versions/checksums below; re-run the generator after a dev-guardian
# release instead. It reads .claude-plugin/plugin.json (the release tag,
# resolved to its exact commit — see below) and configs/ci/pinned.json
# (every action SHA and scanner checksum) — bump those and every value here
# refreshes together in one command.
#
# What this job does, and why each step exists:
#   1. Checks out THIS repository (the project being scanned) at FULL
#      history (\`fetch-depth: 0\`), not the default single-commit shallow
#      clone: gitleaks' own finding identity includes the commit a secret
#      was introduced in, and a shallow clone has no such commit to find —
#      it attributes every PRE-EXISTING secret to the grafted boundary
#      commit instead, which is a DIFFERENT commit on every push (the
#      boundary moves with HEAD), so every finding looks "new" on every
#      run and the gate never passes twice in a row for the same repo.
#      \`persist-credentials: false\` (zizmor's own "artipacked" check) — the
#      checkout action's default leaves the job's GITHUB_TOKEN in the local
#      git config for the rest of the job; nothing after this step needs
#      to push or authenticate as this job, so there is nothing to persist.
#   2. Installs Node.js >= 22.13 — dev-guardian's own floor (\`node:sqlite\`
#      with no \`--experimental-sqlite\` flag).
#   3. Installs the .NET SDK, but ONLY when this repository looks like a
#      .NET project (a root .csproj/.sln) — scan_sast's .NET analyzers are
#      themselves gated the identical way (\`hasRootDotnetSignal\`) and are
#      simply not attempted, no gap at all, on a repo with neither; running
#      a ~300 MB SDK install on every Node/Python-only project regardless
#      would be pure waste. actions/setup-dotnet is pinned by commit SHA
#      like every other action here.
#   4. Points DEV_GUARDIAN_HOME at a directory under \`$RUNNER_TEMP\` — the
#      runner's own documented scratch space — via \`$GITHUB_ENV\`, not a
#      workflow- or job-level \`env:\` block: GitHub Actions does not allow
#      the \`runner\` context there at all ("context 'runner' is not allowed
#      here" — actionlint catches this, and it is why this step exists
#      instead of one \`env:\` line at the top).
#   5. Clones dev-guardian itself at a pinned release tag, resolved to its
#      exact commit SHA when this pipeline was GENERATED (ci-init: \`git
#      ls-remote\`/a local tag lookup) and verified again with \`git
#      rev-parse HEAD\` right after cloning — a moving tag between
#      generation and this run is a supply-chain red flag, and the job
#      refuses rather than trust it silently. Cloned into
#      \`$DEV_GUARDIAN_HOME\`, OUTSIDE this checkout, never into a
#      subdirectory of it: dev-guardian is NOT a dependency of this
#      repository (there is no package.json entry for \`npm install\` to
#      fetch it from), and cloning it INTO the checkout would make step 8's
#      \`dev-guardian scan --project .\` scan dev-guardian's own source,
#      history and deliberately-vulnerable test fixtures as if they were
#      part of THIS project — polluting the SARIF report, the baseline and
#      the gate with findings that have nothing to do with this repository.
#   6. \`npm ci --omit=dev\` inside the clone's mcp/ directory. mcp/dist/ is
#      committed to the dev-guardian repo (its own convention: the repo IS
#      the distribution, no build step at install time) but its RUNTIME
#      dependencies (execa, zod, yaml, the MCP SDK) are ordinary npm
#      packages, not vendored, so they still need installing once per run.
#   7. Installs the scanner binaries \`dev-guardian scan\` drives underneath
#      — Trivy, gitleaks and actionlint — each pinned by exact version and
#      verified against a sha256 fetched from that tool's own GitHub
#      release (never "latest"), downloaded and extracted into a SCRATCH
#      directory under \`$RUNNER_TEMP\`, never into this checkout (an earlier
#      version wrote the downloaded tarballs and extracted binaries
#      straight into the working directory, which gitleaks' own
#      working-tree pass then saw as untracked files well over its size
#      limit — a self-inflicted coverage gap on every run). bandit is
#      installed unconditionally too (cheap; scan_sast only attempts it at
#      all on a repo with Python files, but a template cannot know that in
#      advance). Semgrep and zizmor are Python-distributed (pipx); pip
#      verifies each downloaded wheel's hash against what PyPI's own index
#      recorded for that exact version — real integrity, weaker than
#      \`--require-hashes\` against a pinned constraints file (see
#      configs/ci/pinned.json's own note) — so they are pinned by exact
#      version instead of a hand-fetched checksum.
#   8. Runs \`dev-guardian scan\`, gated against the COMMITTED baseline
#      (.guardian/baseline.json). If this repository has never run
#      \`dev-guardian baseline update\`, every existing finding reads as
#      "new" and this job will very likely fail on its first run — do that
#      once locally and commit the result before relying on this gate.
#   9. Uploads the SARIF report to GitHub code scanning. \`if: always()\` so
#      the upload still runs when step 8 fails the gate (the SARIF file was
#      still written — dev-guardian's own \`scan\` command never skips
#      writing it just because the gate failed); \`continue-on-error: true\`
#      because a repository without GitHub Advanced Security enabled must
#      not fail the whole job over the upload alone — step 8's own gate is
#      what decides pass/fail here, not this step. \`actions: read\` is in
#      \`permissions:\` because a PRIVATE repository's upload-sarif step
#      needs it (public repos do not, but there is no cheaper way to cover
#      both without branching the template on repo visibility).
name: dev-guardian

on:
  push:
    branches: ["main"]
  pull_request:

permissions:
  contents: read
  security-events: write
  actions: read

jobs:
  scan:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1 # v7.0.1
        with:
          fetch-depth: 0
          persist-credentials: false

      - name: Set up Node.js
        uses: actions/setup-node@820762786026740c76f36085b0efc47a31fe5020 # v7.0.0
        with:
          node-version: '22'
          # No dependency cache: setup-node caches npm automatically when
          # package.json names it, and a cache a pull request can write is
          # restored on a push to --branch — zizmor's cache-poisoning finding
          # on a release branch. Nothing here needs the scanned project's
          # dependencies cached; dev-guardian's own install is \`npm ci\`.
          package-manager-cache: false

      - name: Detect a .NET project (root .csproj/.fsproj/.sln/.slnx — same set scan_sast's own hasRootDotnetSignal checks)
        id: dotnet_probe
        run: |
          set -euo pipefail
          # NOT \`ls -- *.csproj *.fsproj *.sln *.slnx\`: with even one of the
          # four patterns unmatched, bash still passes its LITERAL, unglobbed
          # string to \`ls\` (no nullglob here), which then reports that literal
          # name as inaccessible and exits non-zero — so \`ls\` here would need
          # ALL FOUR extensions present at once to ever report "found",
          # exactly backwards from the point of this probe. Reproduced
          # directly: a directory holding only App.csproj (no .fsproj/.sln/
          # .slnx) still made the \`ls\` form print "found=false". \`find\` never
          # errors on an extension nothing matches, and \`-iname\` matches
          # case-insensitively, like hasRootDotnetSignal's own \`/i\` regex.
          if find . -maxdepth 1 \\( -iname '*.csproj' -o -iname '*.fsproj' -o -iname '*.sln' -o -iname '*.slnx' \\) | grep -q .; then
            echo "found=true" >> "$GITHUB_OUTPUT"
          else
            echo "found=false" >> "$GITHUB_OUTPUT"
          fi

      - name: Set up .NET SDK
        if: steps.dotnet_probe.outputs.found == 'true'
        uses: actions/setup-dotnet@a98b56852c35b8e3190ac28c8c2271da59106c68 # v6.0.0
        with:
          dotnet-version: '10.0.x'

      - name: Point DEV_GUARDIAN_HOME outside this checkout
        run: echo "DEV_GUARDIAN_HOME=$RUNNER_TEMP/dev-guardian" >> "$GITHUB_ENV"

      - name: Clone dev-guardian (outside this checkout — see the header comment)
        run: |
          set -euo pipefail
          git clone --depth 1 --branch "v3.0.0" "https://github.com/linofcp007/dev-guardian.git" "$DEV_GUARDIAN_HOME"
          actual_sha="$(git -C "$DEV_GUARDIAN_HOME" rev-parse HEAD)"
          if [ "$actual_sha" != "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" ]; then
            echo "dev-guardian clone at v3.0.0 resolved to $actual_sha, expected aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -- the tag may have moved since this pipeline was generated (a supply-chain red flag). Re-run 'dev-guardian ci-init' after checking why, then commit the refreshed pipeline." >&2
            exit 1
          fi

      - name: Install dev-guardian's runtime dependencies
        run: npm ci --omit=dev --prefix "$DEV_GUARDIAN_HOME/mcp"

      - name: Install scanners (Trivy/gitleaks/actionlint checksum-verified; bandit/semgrep/zizmor pinned by version)
        run: |
          set -euo pipefail
          mkdir -p "$RUNNER_TEMP/dev-guardian-scanners"
          # $1=binary name  $2=download URL  $3=expected sha256  $4=member path inside the tarball
          install_checked() {
            local name="$1" url="$2" sha256="$3" member="$4" dir="$RUNNER_TEMP/dev-guardian-scanners"
            curl -sSfL -o "$dir/$name.tar.gz" "$url"
            echo "$sha256  $dir/$name.tar.gz" | sha256sum -c -
            tar -xzf "$dir/$name.tar.gz" -C "$dir" "$member"
            sudo install -m 0755 "$dir/$member" "/usr/local/bin/$name"
          }
          install_checked trivy "https://github.com/aquasecurity/trivy/releases/download/v0.74.0/trivy_0.74.0_Linux-64bit.tar.gz" "2ae6fe3ee734b7fdf11335663e18c75ea12dccc76062f09f164a3b0f8be4371a" "trivy"
          install_checked gitleaks "https://github.com/gitleaks/gitleaks/releases/download/v8.30.1/gitleaks_8.30.1_linux_x64.tar.gz" "551f6fc83ea457d62a0d98237cbad105af8d557003051f41f3e7ca7b3f2470eb" "gitleaks"
          install_checked actionlint "https://github.com/rhysd/actionlint/releases/download/v1.7.12/actionlint_1.7.12_linux_amd64.tar.gz" "8aca8db96f1b94770f1b0d72b6dddcb1ebb8123cb3712530b08cc387b349a3d8" "actionlint"
          pipx install "bandit[toml]==1.9.4"
          pipx install "semgrep==1.178.0"
          pipx install "zizmor==1.30.1"
          # \`run:\` steps do not share a shell, so \`export PATH=...\` here
          # would not reach the later "dev-guardian scan" step — pipx's own
          # install directory has to be persisted the GitHub Actions way.
          echo "$HOME/.local/bin" >> "$GITHUB_PATH"

      - name: dev-guardian scan
        run: |
          node "$DEV_GUARDIAN_HOME/cli/dev-guardian.mjs" scan \\
            --project . \\
            --fail-on high \\
            --format human \\
            --sarif dev-guardian-results.sarif

      - name: Upload SARIF to code scanning
        if: always()
        continue-on-error: true
        uses: github/codeql-action/upload-sarif@2892aa5e19bbd11bc0cff5427e3b750a04d9e3c2 # v4.38.2
        with:
          sarif_file: dev-guardian-results.sarif

# Paste this at the path shown, or re-run with --write to write it there.
"
`;

exports[`ci-init: snapshot of the rendered templates > gitlab renders exactly as expected 1`] = `
"# Generated by \`dev-guardian ci-init gitlab\` — do not hand-edit the pinned
# versions/checksums below; re-run the generator after a dev-guardian
# release instead. It reads .claude-plugin/plugin.json (the release tag,
# resolved to its exact commit — see below) and configs/ci/pinned.json
# (every scanner checksum) — bump those and every value here refreshes
# together in one command.
#
# What this job does, and why each step exists:
#   1. Runs in a plain node:22-bookworm image — dev-guardian's own floor is
#      Node >= 22.13 (\`node:sqlite\` with no \`--experimental-sqlite\` flag).
#      \`GIT_DEPTH: "0"\` clones FULL history, not GitLab's own shallow
#      default (50 commits): gitleaks' own finding identity includes the
#      commit a secret was introduced in, and a shallow clone has no such
#      commit for anything older than its own boundary — it attributes
#      every pre-existing secret to the grafted boundary commit instead,
#      which moves with every push, so every finding looks "new" on every
#      run and the gate never passes twice in a row for the same repo.
#   2. Installs curl/git/pipx from Debian's own apt repo — the bookworm
#      base image does not carry them by default. A .NET project also
#      needs the .NET SDK for scan_sast's .NET analyzers (the identical
#      gate \`hasRootDotnetSignal\` applies on the GitHub template — a root
#      .csproj/.fsproj/.sln/.slnx); this template does NOT install it
#      (Microsoft's own dotnet-install.sh has no per-release checksum this
#      task could verify the way it did for the three Go binaries below) —
#      a .NET project needs \`dotnet\` on the runner's own image or PATH
#      already, or \`dev-guardian scan\` will report \`dotnet-sdk\` as a named
#      gap and the pipeline's own gate will exit 2 (incomplete scan, never
#      a silent pass) until it does.
#   3. Clones dev-guardian itself at a pinned release tag, resolved to its
#      exact commit SHA when this pipeline was GENERATED (ci-init: \`git
#      ls-remote\`/a local tag lookup) and verified again with \`git
#      rev-parse HEAD\` right after cloning — a moving tag between
#      generation and this run is a supply-chain red flag, and the job
#      refuses rather than trust it silently. Cloned into \`/tmp\`, OUTSIDE
#      \`$CI_PROJECT_DIR\` (this checkout), never into a subdirectory of it:
#      dev-guardian is NOT a dependency of this repository, and cloning it
#      INTO the checkout would make step 6's \`dev-guardian scan --project .\`
#      scan dev-guardian's own source, history and deliberately-vulnerable
#      test fixtures as if they were part of THIS project — polluting the
#      SARIF report, the baseline and the gate with findings that have
#      nothing to do with this repository.
#   4. \`npm ci --omit=dev\` inside the clone's mcp/ directory. mcp/dist/ is
#      committed (dev-guardian's own convention: the repo IS the
#      distribution) but its RUNTIME dependencies (execa, zod, yaml, the
#      MCP SDK) still need installing once per run.
#   5. Installs the scanner binaries \`dev-guardian scan\` drives — Trivy,
#      gitleaks and actionlint — each pinned by exact version and verified
#      against a sha256 fetched from that tool's own GitHub release (never
#      "latest"), downloaded and extracted into a SCRATCH directory under
#      \`/tmp\`, never into this checkout (an earlier version wrote the
#      downloaded tarballs and extracted binaries straight into the working
#      directory, which gitleaks' own working-tree pass then saw as
#      untracked files well over its size limit — a self-inflicted coverage
#      gap on every run). bandit is installed unconditionally too (cheap;
#      scan_sast only attempts it at all on a repo with Python files, but a
#      template cannot know that in advance). Semgrep and zizmor are
#      Python-distributed (pipx); pip verifies each downloaded wheel's hash
#      against what PyPI's own index recorded for that exact version — real
#      integrity, weaker than \`--require-hashes\` against a pinned
#      constraints file (see configs/ci/pinned.json's own note) — so they
#      are pinned by exact version instead of a hand-fetched checksum.
#   6. Runs \`dev-guardian scan\`, gated against the COMMITTED baseline
#      (.guardian/baseline.json). If this repository has never run
#      \`dev-guardian baseline update\`, every existing finding reads as
#      "new" and this job will very likely fail on its first run — do that
#      once locally and commit the result before relying on this gate.
#   7. Archives the SARIF report as a job artifact either way (\`when:
#      always\`), so it survives a failed gate. Unlike GitHub's code
#      scanning, GitLab's own Security Dashboard does not ingest a plain
#      SARIF file — its \`artifacts:reports:*\` types (\`sast\`,
#      \`secret_detection\`, …) each expect GitLab's OWN JSON schema, which
#      dev-guardian does not produce. This is a plain downloadable artifact,
#      not a native Security Dashboard integration.
#
# Shell: \`set -eu\`, deliberately not \`set -o pipefail\`, and no \`local\` in
# \`install_checked\`. GitLab Runner's own default IS bash when the image has
# it — confirmed against GitLab's docs, not assumed — and node:22-bookworm
# does; this is NOT written to defend against a dash-only shell. It is
# written to the POSIX-portable subset regardless, so it behaves
# identically whichever shell actually runs it (a stripped image, or a
# differently configured runner, could still fall back to \`sh\`), and
# neither omission costs anything here: this script's one pipe
# (\`echo … | sha256sum -c -\`) has \`sha256sum -c -\` as its LAST command
# already, so a pipeline's exit status (always its last command's, with or
# without \`pipefail\`) is already the one that must fail the job.
stages:
  - scan

dev-guardian:
  stage: scan
  image: node:22-bookworm
  variables:
    GIT_DEPTH: "0"
    DEV_GUARDIAN_HOME: /tmp/dev-guardian
  before_script:
    - set -eu
    - apt-get update && apt-get install -y --no-install-recommends curl ca-certificates git pipx
  script:
    - set -eu
    - git clone --depth 1 --branch "v3.0.0" "https://github.com/linofcp007/dev-guardian.git" "$DEV_GUARDIAN_HOME"
    - |
      actual_sha="$(git -C "$DEV_GUARDIAN_HOME" rev-parse HEAD)"
      if [ "$actual_sha" != "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" ]; then
        echo "dev-guardian clone at v3.0.0 resolved to $actual_sha, expected aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -- the tag may have moved since this pipeline was generated (a supply-chain red flag). Re-run 'dev-guardian ci-init' after checking why, then commit the refreshed pipeline." >&2
        exit 1
      fi
    - npm ci --omit=dev --prefix "$DEV_GUARDIAN_HOME/mcp"
    - |
      mkdir -p /tmp/dev-guardian-scanners
      install_checked() {
        name="$1"; url="$2"; sha256="$3"; member="$4"; dir="/tmp/dev-guardian-scanners"
        curl -sSfL -o "$dir/$name.tar.gz" "$url"
        echo "$sha256  $dir/$name.tar.gz" | sha256sum -c -
        tar -xzf "$dir/$name.tar.gz" -C "$dir" "$member"
        install -m 0755 "$dir/$member" "/usr/local/bin/$name"
      }
      install_checked trivy "https://github.com/aquasecurity/trivy/releases/download/v0.74.0/trivy_0.74.0_Linux-64bit.tar.gz" "2ae6fe3ee734b7fdf11335663e18c75ea12dccc76062f09f164a3b0f8be4371a" "trivy"
      install_checked gitleaks "https://github.com/gitleaks/gitleaks/releases/download/v8.30.1/gitleaks_8.30.1_linux_x64.tar.gz" "551f6fc83ea457d62a0d98237cbad105af8d557003051f41f3e7ca7b3f2470eb" "gitleaks"
      install_checked actionlint "https://github.com/rhysd/actionlint/releases/download/v1.7.12/actionlint_1.7.12_linux_amd64.tar.gz" "8aca8db96f1b94770f1b0d72b6dddcb1ebb8123cb3712530b08cc387b349a3d8" "actionlint"
    - pipx install "bandit[toml]==1.9.4"
    - pipx install "semgrep==1.178.0"
    - pipx install "zizmor==1.30.1"
    - export PATH="$HOME/.local/bin:$PATH"
    - node "$DEV_GUARDIAN_HOME/cli/dev-guardian.mjs" scan --project . --fail-on high --format human --sarif dev-guardian-results.sarif
  artifacts:
    when: always
    paths:
      - dev-guardian-results.sarif
    expire_in: 30 days
  rules:
    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH

# Paste this at the path shown, or re-run with --write to write it there.
"
`;
